base/manager-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  labels:
    app: manager
    app.kubernetes.io/name: manager
spec:
  selector:
    matchLabels:
      app: manager
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
        - name: manager
          image: ghcr.io/london-bridge/money-moving-manager:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
            - containerPort: 50052
              name: rpc
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 300Mi
      imagePullSecrets:
        - name: regcred
