base/payment-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: payment
    app.kubernetes.io/name: payment
spec:
  selector:
    matchLabels:
      app: payment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: ghcr.io/london-bridge/money-moving-payment:14ce1d70
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
            - containerPort: 50051
              name: rpc
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 300Mi
      imagePullSecrets:
        - name: regcred
