base/seamless-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seamless
  labels:
    app: seamless
    app.kubernetes.io/name: seamless
spec:
  selector:
    matchLabels:
      app: seamless
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: seamless
    spec:
      containers:
        - name: seamless
          image: ghcr.io/london-bridge/money-moving-seamless:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 300Mi
      imagePullSecrets:
        - name: regcred
