base/ledger-backoffice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-backoffice
  namespace: money-moving
  labels:
    app: ledger-backoffice
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app: ledger-backoffice
