base/ledger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger
  namespace: money-moving
  labels:
    app: ledger
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: grpc
      port: 50051
      targetPort: 50051
      protocol: TCP
  selector:
    app: ledger
