base/manager-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: manager
  labels:
    app: manager
    app.kubernetes.io/name: manager
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
    - name: grpc
      port: 50052
      targetPort: 50052
  selector:
    app: manager
