base/payment-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
    app.kubernetes.io/name: payment
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
    - name: grpc
      port: 50051
      targetPort: 50051
  selector:
    app: payment
