base/seamless-pix-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seamless-pix
  labels:
    app: seamless-pix
    app.kubernetes.io/name: seamless-pix
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: seamless-pix
