base/seamless-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seamless
  labels:
    app: seamless
    app.kubernetes.io/name: seamless
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: seamless
